pre-workflow cleanup

--- a/tac_plus.cfg
+++ b/tac_plus.cfg
@@ -8,31 +8,27 @@ id = spawnd {
 }
 
 id = tac_plus {
-  debug = AUTHEN AUTHOR PACKET 
-
-    log = stdout {
-      destination = /dev/stdout
-    }
 
   authorization log group = yes
-    authentication log = stdout
-    authorization log = stdout
-    accounting log = stdout
-
-    host = world {
-      address = 0.0.0.0/0
-        enable = clear enable
-        key = "sw33t_key"
-    }
+  # the /var/log/tac_plus directory should be created by the container entry
+  # script.
+  authentication log = /var/log/tac_plus/authn.log
+  authorization log = /var/log/tac_plus/authz.log
+  accounting log = /var/log/tac_plus/acct.log
+  host = world {
+    address = 0.0.0.0/0
+    enable = clear enable
+    key = "sw33t_key"
+  }
 
   group = admin {
     default service = permit
-      enable = permit
-      service = shell {
-        default command = permit
-          default attribute = permit
-          set priv-lvl = 15
-      }
+    enable = permit
+    service = shell {
+      default command = permit
+      default attribute = permit
+      set priv-lvl = 15
+    }
   }
 
   user = $enable$ {
@@ -41,6 +37,7 @@ id = tac_plus {
 
   user = admin {
     password = clear admin
-      member = admin
+    login = clear admin
+    member = admin
   }
 }
