--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: login to the registry 
-        uses: docker/login-action 
+        uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
