misc. updates for workflow

--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -38,5 +38,9 @@ jobs:
         with:
           context: .
           push: true
+          build-args: 
+            - TACPLUS_VERSION="202109260929"
+            - TACPLUS_HASH="7b6b741ba5ddba01e27cb83a36dfb8c74d61e18b4121584cf2302d0dc186f274"
+
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
