adjustment to branches for troubleshooting

--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - main
+      - github-action
 
 env:
   REGISTRY: ghcr.io
@@ -41,6 +42,5 @@ jobs:
           build-args: 
             - TACPLUS_VERSION="202109260929"
             - TACPLUS_HASH="7b6b741ba5ddba01e27cb83a36dfb8c74d61e18b4121584cf2302d0dc186f274"
-
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
