misc. update to workflow

--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -33,6 +33,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            flavor: |
+              latest=auto
 
       - name: build and push image
         uses: docker/build-push-action@v2
