--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -35,6 +35,8 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
             latest=auto
+          tags: |
+            type=ref,event=tag
 
       - name: build and push image
         uses: docker/build-push-action@v2
