enabled tag=ref

--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=tag
+            type=ref,event=tag,enabled=true
           flavor: |
             latest=auto
 
