updates to enable ipv6

--- a/tac_plus.cfg
+++ b/tac_plus.cfg
@@ -1,5 +1,6 @@
 id = spawnd {
   listen = { port = 49 }
+  listen = { address = :: port = 49 }
   spawn = {
     instances min = 1
       instances max = 10
@@ -17,6 +18,7 @@ id = tac_plus {
   accounting log = /var/log/tac_plus/acct.log
   host = world {
     address = 0.0.0.0/0
+    address = ::/0
     enable = clear enable
     key = "sw33t_key"
   }
