--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -37,10 +37,15 @@ jobs:
           tags: |
             type=ref,event=branch,enabled=true
 
+      # the following is necessary for multi-arch builds
+      - name: set up qemu
+        uses: docker/setup-qemu-action@v3
+
       - name: build and push image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ steps.meta.outputs.tags }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
