--- a/.github/workflows/create-container.yml
+++ b/.github/workflows/create-container.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: login to the registry 
         uses: docker/login-action@v3
@@ -29,7 +29,7 @@ jobs:
 
       - name: extract container metadata
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           flavor: |
@@ -40,6 +40,9 @@ jobs:
       # the following is necessary for multi-arch builds
       - name: set up qemu
         uses: docker/setup-qemu-action@v3
+
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: build and push image
         uses: docker/build-push-action@v2
